# talk2graph-glm

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  opencode.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py
backend/app/api/: __init__.py  admin.py  chat.py  deps.py  errors.py  export.py  providers.py  session.py
backend/app/db/: __init__.py  migrations.py  models.py  session.py
backend/app/dsl/: __init__.py  diff.py  safe_expr.py  schema.py  validator.py
backend/app/llm/: __init__.py  base.py  deepseek.py  extractor.py  minimax.py  mock.py  router.py  volcengine.py  zhipu.py
backend/app/render/: __init__.py  svg.py
backend/app/session/: __init__.py  repo.py
backend/app/solver/: __init__.py  engine.py
backend/scripts/: build_audit_worksheet.py  build_dataset_from_pdf.py  build_final_dataset.py  compare_v1_v2r.py  eval_chengdu.py  eval_cmm.py  eval_dataset.py  extract_prompt.txt  rewrite_v2.py
backend/test/: results_v1_v2r_comparison.md
backend/test/chengdu/: candidates_2021_zhongkao.json  candidates_2025_gaokao.json  chengdu_full.json  chengdu_selected.json
backend/test/results_chengdu/: results.json
backend/tests/: test_v2b_curve.py  test_w10_fallback.py  test_w10_halfplane.py  test_w11_transform.py  test_w12_on_curve.py  test_w13_adaptive_restarts.py  test_w1_endtoend.py  test_w2_llm.py  test_w3_api.py  test_w5_geometry.py  test_w6_ops.py  test_w6_stress.py  test_w7_feedback.py  test_w9_axis.py
deploy/: Caddyfile  README.md  (+5 more)
(+56 files in other folders)
